k8s/overlays/homelab/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: homelab/cpu-tier
                    operator: In
                    values:
                      - cheap
      containers:
        - name: app
          imagePullPolicy: IfNotPresent
